--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,7 +71,7 @@ gambit:
     - export PYTHON_EXECUTABLE=`which python`
     - export PYTHON_LIBRARY="`python-config --prefix`/lib/libpython3.8.so"
     - export PYTHON_INCLUDE_DIR="`python-config --prefix`/include/python3.8"
-    - mkdir BUILD && cd BUILD
+    - mkdir -p BUILD && cd BUILD
     - cmake .. -D WITH_ROOT=ON -D WITH_RESTFRAMES=ON -D WITH_HEPMC=ON -D BUILD_FS_MODELS=MDM
     - make gambit -j2
   needs:
