--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,89 +4,65 @@ stages:
 - build_gambit
 - check
 
-
 variables:
   LD_LIBRARY_PATH: /usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH
 
 
-# TODO: template the very similar build blocks
+.build_template: &build_template
+  image:
+    gambitbsm/gambit-base:$OS
+  script:
+    - export CMAKE_BUILD_TYPE=None
+    - export CMAKE_C_COMPILER=`which gcc`
+    - export CMAKE_CXX_COMPILER=`which g++`
+    - export CMAKE_Fortran_COMPILER=`which gfortran`
+    - export PYTHON_EXECUTABLE=`which python`
+    - export PYTHON_LIBRARY="`python-config --prefix`/lib/libpython3.8.so"
+    - export PYTHON_INCLUDE_DIR="`python-config --prefix`/include/python3.8"
+    - mkdir -p BUILD && cd BUILD
+    - cmake .. -D WITH_ROOT=ON -D WITH_RESTFRAMES=ON -D WITH_HEPMC=ON -D BUILD_FS_MODELS=MDM
+    - make $TARGET -j`nproc --ignore=2`
+  artifacts:
+    when: always
+    paths:
+      - $CI_PROJECT_DIR/BUILD
+    expire_in: 1 week
+
 
 scanners:
-  image:
-    gambitbsm/gambit-base:ubuntu
+  variables:
+    OS: ubuntu
+    TARGET: scanners
   stage: build_scanners
-  script:
-    #- git clean -dffx
-    - export CMAKE_BUILD_TYPE=None
-    - export CMAKE_C_COMPILER=`which mpicc`
-    - export CMAKE_CXX_COMPILER=`which mpicxx`
-    - export CMAKE_Fortran_COMPILER=`which mpifort`
-    - export PYTHON_EXECUTABLE=`which python`
-    - export PYTHON_LIBRARY="`python-config --prefix`/lib/libpython3.8.so"
-    - export PYTHON_INCLUDE_DIR="`python-config --prefix`/include/python3.8"
-    - mkdir -p BUILD && cd BUILD
-    - cmake .. -D WITH_ROOT=ON -D WITH_RESTFRAMES=ON -D WITH_HEPMC=ON -D BUILD_FS_MODELS=MDM
-    - make scanners -j2
-  artifacts:
-    when: always
-    paths:
-      - $CI_PROJECT_DIR/BUILD
-    expire_in: 1 week
-
+  <<: *build_template
 
 backends:
-  image:
-    gambitbsm/gambit-base:ubuntu
+  variables:
+    OS: ubuntu
+    TARGET: backends
   stage: build_backends
-  script:
-    #- git clean -dffx
-    - export CMAKE_BUILD_TYPE=None
-    - export CMAKE_C_COMPILER=`which gcc`
-    - export CMAKE_CXX_COMPILER=`which g++`
-    - export CMAKE_Fortran_COMPILER=`which gfortran`
-    - export PYTHON_EXECUTABLE=`which python`
-    - export PYTHON_LIBRARY="`python-config --prefix`/lib/libpython3.8.so"
-    - export PYTHON_INCLUDE_DIR="`python-config --prefix`/include/python3.8"
-    - mkdir -p BUILD && cd BUILD
-    - cmake .. -D WITH_ROOT=ON -D WITH_RESTFRAMES=ON -D WITH_HEPMC=ON -D BUILD_FS_MODELS=MDM
-    - make backends -j2
+  <<: *build_template
   needs:
     - scanners
-  artifacts:
-    when: always
-    paths:
-      - $CI_PROJECT_DIR/BUILD
-    expire_in: 1 week
-
 
 gambit:
-  image:
-    gambitbsm/gambit-base:ubuntu
+  variables:
+    OS: ubuntu
+    TARGET: gambit
   stage: build_gambit
-  script:
-    - export CMAKE_BUILD_TYPE=None
-    - export CMAKE_C_COMPILER=`which gcc`
-    - export CMAKE_CXX_COMPILER=`which g++`
-    - export CMAKE_Fortran_COMPILER=`which gfortran`
-    - export PYTHON_EXECUTABLE=`which python`
-    - export PYTHON_LIBRARY="`python-config --prefix`/lib/libpython3.8.so"
-    - export PYTHON_INCLUDE_DIR="`python-config --prefix`/include/python3.8"
-    - mkdir -p BUILD && cd BUILD
-    - cmake .. -D WITH_ROOT=ON -D WITH_RESTFRAMES=ON -D WITH_HEPMC=ON -D BUILD_FS_MODELS=MDM
-    - make gambit -j2
+  <<: *build_template
   needs:
     - scanners
     - backends
-  artifacts:
-    when: always
-    paths:
-      - BUILD
-    expire_in: 1 week
 
 
+# TODO: add Fedora variations via $OS
+
+
+# TODO: template on OS
 validate:
   image:
-    gambitbsm/gambit-base:fedora
+    gambitbsm/gambit-base:ubuntu
   stage: check
   script:
     - apt-get -y update
