--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: linux
     container: gambitbsm/gambit-base:ubuntu
     steps:
-    - uses: actions/checkout
+    - uses: actions/checkout@v2
     - name: mkenv
       run: |
            mkdir -p BUILD
