--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: linux
+    runs-on: ubuntu-latest
     container: gambitbsm/gambit-base:ubuntu
     steps:
     - uses: actions/checkout@v2
