--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,11 @@ jobs:
            echo "export PYTHON_EXECUTABLE="$(which python)" >> buildenv.sh
            echo "export PYTHON_LIBRARY=$PYTHON_LIBRARY" >> buildenv.sh
            echo "export PYTHON_INCLUDE_DIR="$PYTHON_INCLUDE_DIR" >> buildenv.sh
+           ls
     - name: scanners
       run: |
+           ls
+           ls BUILD/
            cd BUILD && . buildenv.sh
            cmake .. -D WITH_ROOT=ON -D WITH_RESTFRAMES=ON -D WITH_HEPMC=ON -D BUILD_FS_MODELS=MDM -D WITH_MPI=OFF
            nproc
