--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,16 +33,24 @@ jobs:
            ls
     - name: scanners
       run: |
-           ls
-           pwd
-           ls BUILD/
-           pwd
-           cd BUILD
-           pwd
-           . buildenv.sh
-           cmake .. -D WITH_ROOT=ON -D WITH_RESTFRAMES=ON -D WITH_HEPMC=ON -D BUILD_FS_MODELS=MDM -D WITH_MPI=OFF
            nproc
-           make scanners
+           echo
+           ls
+           echo
+           pwd
+           echo
+           ls BUILD/
+           echo
+           pwd
+           echo
+           cd BUILD
+           echo
+           pwd
+           echo
+           . buildenv.sh
+           #cmake .. -D WITH_ROOT=ON -D WITH_RESTFRAMES=ON -D WITH_HEPMC=ON -D BUILD_FS_MODELS=MDM -D WITH_MPI=OFF
+           #nproc
+           #make scanners
     - name: backends
       run: |
            cd BUILD && . buildenv.sh
