--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,10 @@ jobs:
         echo "export PYTHON_LIBRARY=$PYTHON_LIBRARY" >> buildenv.sh
         echo "export PYTHON_INCLUDE_DIR=$PYTHON_INCLUDE_DIR" >> buildenv.sh
         pwd
+        cat buildenv.sh
         ls
     - name: scanners
+      shell: bash -eo pipefail {0}
       run: |
         nproc
         echo
@@ -51,7 +53,7 @@ jobs:
         echo D
         cat buildenv.sh
         echo E
-        echo $SHELL
+        echo @$SHELL@
         source buildenv.sh
         echo F
         cmake .. -D WITH_ROOT=ON -D WITH_RESTFRAMES=ON -D WITH_HEPMC=ON -D BUILD_FS_MODELS=MDM -D WITH_MPI=OFF
