--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: mkenv
+      shell: bash -eo pipefail {0}
       run: |
         mkdir -p BUILD
         cd BUILD
