--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,15 +12,18 @@ jobs:
   gambit_build:
     runs-on: ubuntu-latest
     container: gambitbsm/gambit-base:ubuntu
+    defaults:
+      run:
+        shell: bash -eo pipefail {0}
     steps:
     - uses: actions/checkout@v2
     - name: mkenv
-      shell: bash -eo pipefail {0}
       run: |
         mkdir -p BUILD
         cd BUILD
-        pwd
+        source /etc/bash.bashrc
         > buildenv.sh
+        echo "source /etc/bash.bashrc" >> buildenv.sh
         echo "export CMAKE_BUILD_TYPE=None" >> buildenv.sh
         echo "export CMAKE_C_COMPILER=$(which gcc)" >> buildenv.sh
         echo "export CMAKE_CXX_COMPILER=$(which g++)" >> buildenv.sh
@@ -30,46 +33,20 @@ jobs:
         echo "export PYTHON_EXECUTABLE=$(which python)" >> buildenv.sh
         echo "export PYTHON_LIBRARY=$PYTHON_LIBRARY" >> buildenv.sh
         echo "export PYTHON_INCLUDE_DIR=$PYTHON_INCLUDE_DIR" >> buildenv.sh
-        pwd
+        echo "export LD_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH" >> buildenv.sh
         cat buildenv.sh
-        ls
     - name: scanners
-      shell: bash -eo pipefail {0}
       run: |
-        nproc
-        echo
-        ls
-        echo
-        pwd
-        echo
-        ls BUILD/
-        echo
-        pwd
-        echo A
-        cd BUILD/
-        echo B
-        pwd
-        echo C
-        ls
-        echo D
-        cat buildenv.sh
-        echo E
-        echo @$SHELL@
-        source /etc/profile.d/gambit-setup.sh
-        source buildenv.sh
-        echo F
+        cd BUILD/ && . buildenv.sh
         cmake .. -D WITH_ROOT=ON -D WITH_RESTFRAMES=ON -D WITH_HEPMC=ON -D BUILD_FS_MODELS=MDM -D WITH_MPI=OFF
-        nproc
         make -j$(nproc) scanners
     - name: backends
       run: |
         cd BUILD && . buildenv.sh
         cmake .. -D WITH_ROOT=ON -D WITH_RESTFRAMES=ON -D WITH_HEPMC=ON -D BUILD_FS_MODELS=MDM -D WITH_MPI=OFF
-        nproc
         make backends
     - name: gambit
       run: |
         cd BUILD && . buildenv.sh
         cmake .. -D WITH_ROOT=ON -D WITH_RESTFRAMES=ON -D WITH_HEPMC=ON -D BUILD_FS_MODELS=MDM -D WITH_MPI=OFF
-        nproc
         make gambit
