--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         shell: bash -eo pipefail {0}
     steps:
     - uses: actions/checkout@v2
-    - name: mkenv
+    - name: Set up build environment
       run: |
         mkdir -p BUILD
         cd BUILD
@@ -35,18 +35,41 @@ jobs:
         echo "export PYTHON_INCLUDE_DIR=$PYTHON_INCLUDE_DIR" >> buildenv.sh
         echo "export LD_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH" >> buildenv.sh
         cat buildenv.sh
-    - name: scanners
+    - name: Build scanners
       run: |
         cd BUILD/ && . buildenv.sh
         cmake .. -D WITH_ROOT=ON -D WITH_RESTFRAMES=ON -D WITH_HEPMC=ON -D BUILD_FS_MODELS=MDM -D WITH_MPI=OFF
         make -j$(nproc) scanners
-    - name: backends
+    - name: Build backends
       run: |
         cd BUILD && . buildenv.sh
         cmake .. -D WITH_ROOT=ON -D WITH_RESTFRAMES=ON -D WITH_HEPMC=ON -D BUILD_FS_MODELS=MDM -D WITH_MPI=OFF
         make backends
-    - name: gambit
+    - name: Build Gambit
       run: |
         cd BUILD && . buildenv.sh
         cmake .. -D WITH_ROOT=ON -D WITH_RESTFRAMES=ON -D WITH_HEPMC=ON -D BUILD_FS_MODELS=MDM -D WITH_MPI=OFF
         make gambit
+    - name: Validate with BATS
+      run: |
+        . BUILD/buildenv.sh
+        apt-get -y update
+        apt-get -y install git python python-yaml cowsay bats numdiff
+        cowsay "Testing GAMBIT on $(date)"
+        cowsay "$(git log -n 5)"
+        # Get BATS tests and notify re. updates
+        git clone https://github.com/GambitBSM/gambit_bats.git
+        cd gambit_bats
+        git pull
+        cowsay "$(git log -n 5)"
+        rm -f ../bats.tap
+        export GAMBIT="$PWD/../"
+        # Pipe test results to file for JENKINS
+        bats --tap *.bats > ../bats.tap
+        cd ..
+        # Note email addresses for failed tests
+        source gambit_bats/email.bash
+        export BATS_FAIL_EMAIL=$(bats_fail_email ./bats.tap)
+        export GIT_FAIL_EMAIL="$(git_fail_email ./gambit_bats) $(git_fail_email ./)"
+        cowsay "For BATS yaml failures, contact $BATS_FAIL_EMAIL"
+        cowsay "For GAMBIT and test changes, contact $GIT_FAIL_EMAIL"
