--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,12 +44,12 @@ jobs:
       run: |
         cd BUILD && . buildenv.sh
         cmake .. -D WITH_ROOT=ON -D WITH_RESTFRAMES=ON -D WITH_HEPMC=ON -D BUILD_FS_MODELS=MDM -D WITH_MPI=OFF
-        make backends
+        make -j$(nproc) backends
     - name: Build Gambit
       run: |
         cd BUILD && . buildenv.sh
         cmake .. -D WITH_ROOT=ON -D WITH_RESTFRAMES=ON -D WITH_HEPMC=ON -D BUILD_FS_MODELS=MDM -D WITH_MPI=OFF
-        make gambit
+        make -j$(nproc) gambit
     - name: Validate with BATS
       run: |
         . BUILD/buildenv.sh
