--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,9 @@ jobs:
       run: |
         mkdir -p BUILD
         cd BUILD
+        pwd
         . /etc/profile
+        pwd
         > buildenv.sh
         echo ". /etc/profile" >> buildenv.sh
         echo "export CMAKE_BUILD_TYPE=None" >> buildenv.sh
@@ -36,6 +38,7 @@ jobs:
         echo "export PYTHON_LIBRARY=$PYTHON_LIBRARY" >> buildenv.sh
         echo "export PYTHON_INCLUDE_DIR=$PYTHON_INCLUDE_DIR" >> buildenv.sh
         echo "export LD_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH" >> buildenv.sh
+        pwd
         cat buildenv.sh
     - name: Build scanners
       run: |
