--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Ubuntu HDF5 clean
-      if: ${{ matrix.os == 'ubuntu' }}
+      if: ${{ matrix.arch == 'ubuntu' }}
       run: |
         apt-get remove libhdf5-openmpi-dev
         apt-get install libhdf5-dev
