More bats debug

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,6 +97,9 @@ jobs:
         echo "Dir = $PWD"
         echo "Dir contents:"
         ls
+        echo "Testing BATS"
+        bats
+        numdiff
         export GAMBIT="$GITHUB_WORKSPACE"
         echo "Running BATS"
         bats --tap *.bats > $GAMBIT/bats.tap
