--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,9 +98,9 @@ jobs:
         echo "Dir contents:"
         ls
         echo "Testing BATS"
-        bats
+        bats -h
         echo "Testing numdiff"
-        numdiff
+        numdiff || true
         echo "Running BATS"
         export GAMBIT="$GITHUB_WORKSPACE"
         bats --tap *.bats > $GAMBIT/bats.tap
