Add debug printouts for Fedora env, and stop using MPI compilers

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,19 +35,27 @@ jobs:
       run: |
         mkdir -p BUILD
         cd BUILD
+        echo 1
         . /etc/profile
+        echo 2
         > buildenv.sh
+        echo 3
         echo ". /etc/profile" >> buildenv.sh
         echo "export CMAKE_BUILD_TYPE=None" >> buildenv.sh
-        echo "export CMAKE_C_COMPILER=$(which mpicc)" >> buildenv.sh
-        echo "export CMAKE_CXX_COMPILER=$(which mpic++)" >> buildenv.sh
-        echo "export CMAKE_Fortran_COMPILER=$(which mpifort)" >> buildenv.sh
+        echo 4
+        echo "export CMAKE_C_COMPILER=$(which gcc)" >> buildenv.sh
+        echo "export CMAKE_CXX_COMPILER=$(which g++)" >> buildenv.sh
+        echo "export CMAKE_Fortran_COMPILER=$(which gfortran)" >> buildenv.sh
+        echo 5
         PYTHON_LIBRARY=$(python -c 'from __future__ import print_function; from distutils.sysconfig import get_config_var; print("%s/%s" % (get_config_var("LIBDIR"), get_config_var("INSTSONAME")))')
         PYTHON_INCLUDE_DIR=$(python -c 'from __future__ import print_function; from distutils import sysconfig; print(sysconfig.get_config_var("INCLUDEPY"))')
+        echo 6
         echo "export PYTHON_EXECUTABLE=$(which python)" >> buildenv.sh
+        echo 7
         echo "export PYTHON_LIBRARY=$PYTHON_LIBRARY" >> buildenv.sh
         echo "export PYTHON_INCLUDE_DIR=$PYTHON_INCLUDE_DIR" >> buildenv.sh
         echo "export LD_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH" >> buildenv.sh
+        echo 8
         cat buildenv.sh
     - name: Build scanners
       run: |
