Added check to MPLike that no nuisance param that is not needed by any like is scanned over. Doing so, I realised we can't scan multiple likelihoods with nuisance params atm. Will fix it!
	modified:   Backends/patches/montepythonlike/3.1.0/MontePythonLike.py
	modified:   Backends/patches/montepythonlike/3.3.0/MontePythonLike.py
	modified:   Backends/src/frontends/MontePythonLike_3_1_0.cpp
	modified:   Backends/src/frontends/MontePythonLike_3_3_0.cpp
	modified:   CosmoBit/src/CosmoBit.cpp
	modified:   yaml_files/CosmoBit_testMP.yaml

--- a/yaml_files/CosmoBit_testMP.yaml
+++ b/yaml_files/CosmoBit_testMP.yaml
@@ -56,6 +56,8 @@ Parameters:
 
   # Cosmological nuisance parameters (except for Planck CMB Likelihoods)
   cosmo_nuisance_Pantheon: !import include/cosmo_nuisance_Pantheon.yaml
+  #cosmo_nuisance_euclid_lensing:
+  #  epsilon_euclid: 1.0
 
 #======== Prior setup ========
 Priors:
