--- a/yaml_files/CosmoBit_testMP.yaml
+++ b/yaml_files/CosmoBit_testMP.yaml
@@ -124,6 +124,12 @@ Rules:
          #P_k_max_h/Mpc: 3
          #m_ncdm: 2
 
+  # This rule is only stricly needed when more than one
+  # MP likelihoods with nuisance parameters are in use
+  - capability: parameter_dict_for_MPLike
+    function: set_parameter_dict_for_MPLike
+    module: CosmoBit
+
   # you have to set by hand if you want to set the class parameters with or without setting arguments from MontePython Likelihoods
   # if the montepythonlike backend is installed (if not it should automatically choose the function 'init_Classy_cosmo_container')
   - capability: classy_MPLike_input
